<resources>
    <string name="app_name">The First Things</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_in">"Nhập Khoản Thu"</string>
    <string name="title_out">"Nhập Khoản Chi"</string>
    <string name="desc_logo">Logo của ứng dụng</string>
    <string name="et_hint_in">"Tiền Thu"</string>
    <string name="et_hint_out">"Tiền Chi"</string>
    <string name="desc_calendar">Phím hiển thị lịch để chọn ngày</string>
    <string name="tv_money">Số tiền:</string>
    <string name="tv_vnd">VND</string>
    <string name="tv_type">Nhóm:</string>
    <string name="tv_date">Ngày:</string>
    <string name="tv_note">Ghi chú:</string>
    <string name="et_hint_note">Có thể để trống</string>
    <string name="img_btn_save">Phím để lưu giao dịch</string>
    <string name="et_hint_old_password">Mật khẩu hiện tại</string>
    <string name="et_hint_new_password">Mật khẩu mới</string>
    <string name="et_hint_retype_new_password">Nhập lại mật khẩu mới</string>
    <string name="et_hint_retype_password">Nhập lại mật khẩu</string>
    <string name="btn_change_password">Đổi mật khẩu</string>
    <string name="btn_cancel">Huỷ</string>
    <string name="checktv_forgot_password">Quên mật khẩu?</string>
    <string name="tv_name">Name:</string>
    <string name="tv_email">Email:</string>
    <string name="tv_title">Quản Lý Chi Tiêu</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_sign_up">Đăng Kí</string>
    <string name="btn_sign_in">Đăng Nhập</string>
    <string name="tv_title_sign_up">Đăng Kí Tài Khoản</string>
    <string name="et_hint_user_name">Tên người dùng</string>
    <string name="btn_create_account">Tạo tài khoản</string>
    <string name="tv_bank_name">Tên ngân hàng:</string>
    <string name="tv_rate">Lãi xuất:</string>
    <string name="tv_percent">%</string>
    <string name="tv_date_deposit">Ngày gửi:</string>
    <string name="desc_division">Đường viền ngang ngăn cách các view</string>
    <string name="tv_title_banking_account">Tài Khoản Ngân Hàng</string>
    <string name="tv_title_list_account">Danh Sách Tài Khoản</string>
    <string name="tv_select_fcurrency">Ngoại Tệ:</string>
    <string name="tv_exchange_rate">Tỉ Giá:</string>
    <string name="tv_select_year">Chọn năm muốn xem</string>
    <string name="tv_year">Năm:</string>
    <string name="tv_money_in">Thu:</string>
    <string name="tv_money_out">Chi:</string>
    <string name="desc_avatar">Hình đại diện của người dùng</string>
    <string name="item_transaction">Sổ giao dịch</string>
    <string name="item_statistics">Thống kê</string>
    <string name="item_exchange">Đổi tiền tệ</string>
    <string name="item_saving_account">Tài khoản ngân hàng</string>
    <string name="item_account">Tài khoản</string>
    <string name="item_information">Thông tin</string>
    <string name="item_sync">Đồng bộ</string>
    <string name="item_logout">Đăng xuất</string>
</resources>
