<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/item_transaction" />
        <item
            android:id="@+id/nav_diagram"
            android:icon="@drawable/ic_diagram"
            android:title="@string/item_statistics" />
        <item
            android:id="@+id/nav_exchange"
            android:icon="@drawable/ic_exchange"
            android:title="@string/item_exchange" />
        <item
            android:id="@+id/nav_deposit"
            android:icon="@drawable/ic_money_saving"
            android:title="@string/item_saving_account" />

    </group>

    <item android:title="@string/item_account">
        <menu>
            <item
                android:id="@+id/nav_user_info"
                android:icon="@drawable/ic_user_info"
                android:title="@string/item_information" />
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/ic_sync"
                android:title="@string/item_sync" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/item_logout" />
        </menu>
    </item>

</menu>
