<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_old_password_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/et_hint_old_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_new_password_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_re_password_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint_retype_new_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_change_password_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_selector"
            android:text="@string/btn_change_password" />

        <Button
            android:id="@+id/btn_cancel_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_normal"
            android:text="@string/btn_cancel" />
    </LinearLayout>

</ScrollView>