<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/desc_logo"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/tv_login_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/tv_title_sign_up"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ProgressBar
            android:id="@+id/signUp_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/signUp_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_user_name"
                    android:inputType="textCapWords"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_repassword_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_hint_retype_password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_selector"
                android:text="@string/btn_create_account"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
